formatted and change to iteració 4

--- a/A08/index.html
+++ b/A08/index.html
@@ -1,106 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Landing page - Iteración 3</title>
-    <link
-      rel="stylesheet"
-      href="css/style.css"
-    />
-    <link
-      rel="icon"
-      href="favicon.ico"
-      type="image/x-icon"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="logo-container">
-        <img
-          src="img/gato.webp"
-          alt="gato con capucha"
-          width="55px"
-          height="55px"
-        />
-        <span>Marcos Barrero</span>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a
-              href="index.html"
-              class="active"
-            >
-              Sobre mi
-            </a>
-          </li>
-          <li><a href="informacion-escolar.html">Información escolar</a></li>
-          <li><a href="galeria-imatges.html">Galeria imágenes</a></li>
-          <li><a href="nou-treballador.html">Trabaja conmigo</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <!-- Información general sobre mi -->
-      <section>
-        <h1>Sobre mi</h1>
-        <h2>Alumno de 1DAW</h2>
-        <h3>Entusiasta de la informática</h3>
-        <p>Bienvenido a mi página web! Nací en Barcelona en el año 2006.</p>
-        <p>
-          Durante mi estancia cómo alumno he aprendido varias tecnologías cómo
-          Python.
-        </p>
-      </section>
-      <!-- Mis aficiones -->
-      <section>
-        <h1>Aficiones</h1>
-        <article>
-          <p>Mis aficiones personales son:</p>
-          <ul>
-            <li>Jugar videojuegos</li>
-            <li>Programar páginas web</li>
-            <li>Hacer fotografías</li>
-          </ul>
-        </article>
-        <article>
-          <a
-            href="https://www.disminuir.link/"
-            target="_blank"
-            class="link"
-          >
-            Accede a uno de mis proyectos personales!
-          </a>
-        </article>
-      </section>
-      <!-- Mis estudios -->
-      <section>
-        <h1>Estudios</h1>
-        <p>Mis estudios son los siguientes:</p>
-        <ul>
-          <li>Ins Joaquim Mir / 1DAW / 2024 - Actual</li>
-          <li>Ins Joaquim Mir / 1SMX y 2SMX / 2022 - 2024</li>
-          <li>F.X. Lluch i Rafecas / ESO / 2018 - 2022</li>
-        </ul>
-      </section>
-    </main>
-    <aside>
-      <h1>Tecnologías usadas</h1>
-      <p>
-        Para esta landing página se han utilizado las siguientes tecnologías:
-      </p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing page - Iteración 4</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+</head>
+
+<body>
+  <header>
+    <div class="logo-container">
+      <img src="img/gato.webp" alt="gato con capucha" width="55px" height="55px" />
+      <span>Marcos Barrero</span>
+    </div>
+    <nav>
       <ul>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li>
+          <a href="index.html" class="active">
+            Sobre mi
+          </a>
+        </li>
+        <li><a href="informacion-escolar.html">Información escolar</a></li>
+        <li><a href="galeria-imatges.html">Galeria imágenes</a></li>
+        <li><a href="nou-treballador.html">Trabaja conmigo</a></li>
       </ul>
-    </aside>
-    <footer>
-      <p>Propiedad de <b>Marcos Barrero</b></p>
-      <address>Ins Joaquim Mir</address>
-    </footer>
-  </body>
+    </nav>
+  </header>
+  <main>
+    <!-- Información general sobre mi -->
+    <section>
+      <h1>Sobre mi</h1>
+      <h2>Alumno de 1DAW</h2>
+      <h3>Entusiasta de la informática</h3>
+      <p>Bienvenido a mi página web! Nací en Barcelona en el año 2006.</p>
+      <p>
+        Durante mi estancia cómo alumno he aprendido varias tecnologías cómo
+        Python.
+      </p>
+    </section>
+    <!-- Mis aficiones -->
+    <section>
+      <h1>Aficiones</h1>
+      <article>
+        <p>Mis aficiones personales son:</p>
+        <ul>
+          <li>Jugar videojuegos</li>
+          <li>Programar páginas web</li>
+          <li>Hacer fotografías</li>
+        </ul>
+      </article>
+      <article>
+        <a href="https://www.disminuir.link/" target="_blank" class="link">
+          Accede a uno de mis proyectos personales!
+        </a>
+      </article>
+    </section>
+    <!-- Mis estudios -->
+    <section>
+      <h1>Estudios</h1>
+      <p>Mis estudios son los siguientes:</p>
+      <ul>
+        <li>Ins Joaquim Mir / 1DAW / 2024 - Actual</li>
+        <li>Ins Joaquim Mir / 1SMX y 2SMX / 2022 - 2024</li>
+        <li>F.X. Lluch i Rafecas / ESO / 2018 - 2022</li>
+      </ul>
+    </section>
+  </main>
+  <aside>
+    <h1>Tecnologías usadas</h1>
+    <p>
+      Para esta landing página se han utilizado las siguientes tecnologías:
+    </p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+  </aside>
+  <footer>
+    <p>Propiedad de <b>Marcos Barrero</b></p>
+    <address>Ins Joaquim Mir</address>
+  </footer>
+</body>
+
 </html>
